--- a/cmd/cloud-gate/customization_data/templates/footer_extra.tmpl
+++ b/cmd/cloud-gate/customization_data/templates/footer_extra.tmpl
@@ -1,3 +1,3 @@
 {{define "footer_extra"}}
-	| <a href="https://github.com/Symantec/cloud-gate"> Source Code </a>
+	| <a href="https://github.com/Cloud-Foundations/cloud-gate"> Source Code </a>
 {{end}}
